Correct letter spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ background-color: var(--white-color);
   margin-bottom: 72px;
   font-size: 36px;
   line-height: 1.11;
+  letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
   color: var(--dark-color);
@@ -77,6 +78,7 @@ background-color: var(--white-color);
   font-weight: 500;
   font-size: 20px;
   line-height: 1.20;
+  letter-spacing: 0.02em;
   color: var(--dark-color);
 }
 
@@ -213,6 +215,7 @@ background-color: var(--white-color);
   color: var(--white-color);
   font-size: 56px;
   line-height: 1.07;
+  letter-spacing: 0.02em;
 }
 
 .modal-btn {
@@ -460,6 +463,7 @@ background-color: var(--white-color);
   margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.50;
+  letter-spacing: 0.02em;
   color: var(--white-color);
 }
 
